# tiny_hello_world.rs

./: Cargo.toml  README.md
src/: main.rs
