cargo-features = ["profile-rustflags"]

[package]
name = "complicated_hello_world"
authors = ["0xricksanchez <admin@0x434b.dev>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
opt-level = "z"  # Optimize for size.
#opt-level = "s"  # Optimize for size.
codegen-units = 1
panic = "abort"
rustflags = ["-Clink-args=-fuse-ld=lld", "-Clink-args=-Wl,--icf=all", "-Clink-arg=-nostartfiles", "-Ctarget-cpu=native"]

